# fraud-detection-showcase

./: .coverage  .gitignore  README.md  pyproject.toml
config/: config.yaml
docs/: context-engineering.md
docs/blog/: 2026-06-01-fraud-detection-quality-gate.md
docs/superpowers/plans/: 2026-05-30-fraud-detection-showcase.md
docs/superpowers/specs/: 2026-05-30-fraud-detection-showcase-design.md
notebooks/: 00_overview.ipynb  01_ingestion_duckdb.ipynb  02_eda.ipynb  03_data_quality.ipynb  04_preprocessing.ipynb  05_feature_engineering.ipynb  06_ml_prediction.ipynb  07_business_impact.ipynb  08_unsupervised_appendix.ipynb  09_business_insights.ipynb
reports/: results.json
reports/html/: index.html
src/fraud/: config.py  costs.py  data.py  evaluate.py  features.py  io.py  modeling.py  preprocess.py  quality.py  report.py
src/fraud/templates/: report.html.j2
tests/: test_config.py  test_costs.py  test_data.py  test_evaluate.py  test_features.py  test_io.py  test_modeling.py  test_preprocess.py  test_quality.py  test_report.py
