[project]
name = "fraud-detection-showcase"
version = "0.1.0"
description = "Business-led credit-card fraud detection: cost-optimal, calibrated, explainable."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2", "polars>=1.0", "duckdb>=1.0", "pyarrow>=16",
  "scikit-learn>=1.5", "xgboost>=2.1", "lightgbm>=4.5",
  "imbalanced-learn>=0.12", "shap>=0.46",
  "pydantic>=2.8", "pyyaml>=6", "jinja2>=3.1",
  "matplotlib>=3.9", "plotly>=5.23", "jupyter>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=5.0", "ruff>=0.6", "ipykernel>=6.29", "nbformat>=5.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/fraud --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
